--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^2.4.2",
     "vue": "^2.4.2",
     "vue-loader": "^12.2.2",
+    "vue-property-decorator": "^5.1.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.3.0"
   }
