--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "strict": true,
     "noImplicitReturns": true,
+    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   },
   "include": [
