--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "ts-loader": "^2.3.1",
+    "tslint": "^5.5.0",
+    "tslint-config-standard": "^6.0.1",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
     "vue": "^2.4.2",
     "vue-loader": "^12.2.2",
