--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start test/unit/karma.conf.js"
   },
   "author": "gongzza <gz.us.to@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.0.1",
+    "chai": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "sinon": "^2.3.8",
     "ts-loader": "^2.3.1",
     "tslint": "^5.5.0",
     "tslint-config-standard": "^6.0.1",
