--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon": "^1.0.5",
     "karma-webpack": "^2.0.4",
