--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
+    "bulma": "^0.4.3",
     "chai": "^4.1.0",
+    "css-loader": "^0.28.4",
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
@@ -21,7 +23,9 @@
     "karma-sinon": "^1.0.5",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.14",
+    "sass-loader": "^6.0.6",
     "sinon": "^2.3.8",
     "ts-loader": "^2.3.1",
     "tslint": "^5.5.0",
@@ -31,6 +35,7 @@
     "vue": "^2.4.2",
     "vue-loader": "^12.2.2",
     "vue-property-decorator": "^5.1.1",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.3.0"
   }
