--- a/package.json
+++ b/package.json
@@ -9,26 +9,15 @@
   },
   "author": "gongzza <gz.us.to@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.4.3",
-    "chai": "^4.1.0",
     "css-loader": "^0.28.4",
-    "karma": "^1.7.0",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sinon": "^1.0.5",
-    "karma-webpack": "^2.0.4",
     "loglevel": "^1.4.1",
-    "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
-    "phantomjs-prebuilt": "^2.1.14",
     "sass-loader": "^6.0.6",
-    "sinon": "^2.3.8",
     "ts-loader": "^2.3.1",
     "tslint": "^5.5.0",
     "tslint-config-standard": "^6.0.1",
@@ -39,7 +28,20 @@
     "vue-property-decorator": "^5.1.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.3.0",
+    "webpack": "^3.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "sinon": "^2.3.8",
     "webpack-dev-server": "^2.6.0"
   }
 }
