--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "gongzza <gz.us.to@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.4.3",
     "css-loader": "^0.28.4",
@@ -35,6 +37,7 @@
     "@types/chai": "^4.0.1",
     "@types/mocha": "^2.2.41",
     "@types/webpack-env": "^1.13.0",
+    "axios-mock-adapter": "^1.9.0",
     "chai": "^4.1.0",
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
