Set allowJs for tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "strictNullChecks": false,
     "lib": [
       "dom", "es6"
-    ]
+    ],
+    "allowJs": true
   },
   "include": [
     "src/**/*"
