--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "vue-property-decorator": "^5.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
+    "vuex": "^2.3.1",
+    "vuex-class": "^0.2.0",
     "webpack": "^3.3.0"
   },
   "devDependencies": {
