--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "lib": [
       "dom", "es6"
     ],
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
     "src/**/*"
