--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
+    "@types/faker": "^4.1.0",
     "@types/mocha": "^2.2.41",
+    "@types/node": "^8.0.19",
     "@types/webpack-env": "^1.13.0",
     "axios-mock-adapter": "^1.9.0",
     "chai": "^4.1.0",
+    "faker": "^4.1.0",
     "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
