Refactor td-input component
Component를 `index.ts`와 `index.vue` 2개로 만든다.
- `index.ts`는 typescript의 장점을 살리기 위해서 따로 만듬.
- `index.vue`는 vue-loader와 같이 사용하기 위해서 작성

Vue의 장점중 하나인 Single File Component를 못하게 되서 조금 아쉽긴 하다.
하지만, typescript의 장점을 재대로 살릴 수 있어서 장점이 더 큰 것 같다.

`tsconfig.json`을 2개를 둔 이유는 src와 test에서 같은 syntax로 가져오고기 위해서이다.

`import TdInput from '@/components/TdInput'`
- src 에서는 `index.vue`를 가져오고 // webpack.resolve.extensions에서 .vue를 앞에 둔다.
- test 에서는 `index.ts`를 가져온다.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,10 +13,9 @@
     "lib": [
       "dom", "es6"
     ],
-    "allowJs": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  }
+    "allowJs": true
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
