--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,7 +13,10 @@
     "lib": [
       "dom", "es6"
     ],
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": [
+      "node_modules/@types", "src/@types"
+    ]
   },
   "include": [
     "src/**/*"
