--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "gongzza <gz.us.to@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@gongzza/vue-property-decorator": "^5.2.3",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.4.3",
@@ -27,7 +28,6 @@
     "typescript": "^2.4.2",
     "vue": "^2.4.2",
     "vue-loader": "^12.2.2",
-    "vue-property-decorator": "^5.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^2.3.1",
